# code-companion

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  claude-companion-spec.md  install.sh  main.py  pyproject.toml
data/: claude-companion.desktop  dev.typedev.ClaudeCompanion.desktop  dev.typedev.CodeCompanion.desktop
docs/: README.md  TODO-editor-search.md  file-monitor-service-plan.md  git-ux-improvements-plan.md  mcp.md  plan-agent-observability.md  plan-code-companion-refactor.md  plan-codex-history-sync.md  plan-git-centric-project-manager.md  plan-github-issues.md  plan-local-dispatch.md  plan-mcp-integration.md  plan-migration-hardening.md  plan-project-file-sync.md  plan-provider-adapters.md  plan-rules.md  plan-session-supervisor.md  plan-stability-roadmap.md  plan-sync-across-machines.md  plan-sync-resume-continuity.md  plan-touchpad-scroll.md  plan-ui-persistent-claude-pane.md  plan-ui-small-screen-fixes.md  plan-worktree-delegation.md  plan-worktrees-multiagent.md  snippets-plan.md  v0.2-session-viewer.md  v0.3-active-sessions.md  v0.4-project-workspace.md  v0.5-git-integration.md  v0.6-improvements-plan.md
notes/: my-note2.md  note-test.md  note2.md  notes3.md
packaging/: Containerfile.builder  README.md  _build-in-container.sh  after-install.sh  build.sh  import_smoke.py  launcher.sh  release.sh  test-install.sh  vendor.sh
scripts/: file_sync_probe.py
src/: __init__.py  dispatch_client.py  main.py  project_manager.py  project_window.py  remote_session_window.py  version.py  window.py
tests/: conftest.py  helpers.py  test_atomic_write.py  test_claude_session.py  test_codex_history.py  test_credential_service.py  test_file_sync.py  test_file_sync_service.py  test_file_sync_transport.py  test_git_features.py  test_git_merge.py  test_git_push.py  test_git_session_changes.py  test_git_status.py  test_git_worktree.py  test_git_worktree_ops.py  test_github_repos.py  test_gui_harness.py  test_history_robustness.py  test_markdown_tasks.py  test_mcp_server.py  test_mcp_worktree.py  test_message_store.py  test_model_pricing.py  test_project_catalog.py  test_project_identity.py  test_prompt_search.py  (+13 more)
(+152 files in other folders)
