[project]
name = "code-companion"
version = "0.8.0"
description = "GTK4/libadwaita desktop companion for AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygobject>=3.46",
    "pygit2>=1.13.0",
    "pathspec>=0.12.0",
    "mistune>=3.1.4",
    "mcp>=1.28,<2",
]
license = "Apache-2.0"
authors = [
    { name = "Alexander Lubovenko", email = "lubovenko@gmail.com" }
]

[project.scripts]
code-companion = "src.main:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.1.1",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
